[tool.poetry]
name = "ni_measurement_plugin_package_builder"
version = "1.3.0-dev3"
description = "NI Package builder for python measurement plug-ins"
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
packages = [{include = "ni_measurement_plugin_package_builder", from = "src"}]
license = "MIT"
classifiers = [
    "Development Status :: 3- Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.1"
tomli = "^2.0.1"
click = "^8.1.7"
nisystemlink-feeds-manager = "^1.0.0.dev1"

[tool.poetry.scripts]
ni-measurement-plugin-package-builder = "ni_measurement_plugin_package_builder.main:run"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
ni-python-styleguide = "^0.4.6"
bandit = { version = "^1.7", extras = ["toml"] }

[tool.bandit]
skips = [
  "B404", # blacklist
  "B603", # subprocess_without_shell_equals_true
]
exclude_dirs = [".venv"]

[[tool.mypy.overrides]]
module = "nisystemlink_feeds_manager.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
