[tool.poetry]
name = "ni_measurement_plugin_packager"
version = "1.3.0-dev3"
description = "NI Package builder for python measurement plug-ins"
authors = ["NI <opensource@ni.com>"]
readme = "README.md"
packages = [{include = "ni_measurement_plugin_packager", from = "src"}]
license = "MIT"
classifiers = [
    "Development Status :: 3- Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Operating System :: Microsoft :: Windows",
    # Poetry automatically adds classifiers for the license and the supported Python versions.
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.7.1"
tomli = "^2.0.1"
click = "^8.1.7"
nisystemlink-feeds-manager = "^1.0.0.dev1"


[tool.poetry.scripts]
ni-measurement-plugin-packager = "ni_measurement_plugin_packager.main:run"

[tool.poetry.group.dev.dependencies]
ni-python-styleguide = "^0.4.5"
lint = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
